# haskell-hashsplit

./: README.md  hashsplit.cabal
src/: HashSplit.hs
src/HashSplit/: Classes.hs
src/HashSplit/Hashes/: CP32.hs  RRS1.hs
src/HashSplit/Internal/: Chunk.hs  RingBuffer.hs
tests/: Main.hs
