cabal-version:       2.2
name:                hashsplit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zenhack/hashsplit-hs
license:             MIT

license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://git.zenhack.net/zenhack/hashsplit-hs

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.12 && <5
    , zenhack-prelude ^>=0.1
    , vector ^>=0.12.1
    , data-default-class ^>=0.1.2
    , bytestring ^>=0.10.10
  default-language:    Haskell2010

library
  import: shared-opts
  hs-source-dirs:      src
  exposed-modules:
      HashSplit
    , HashSplit.Classes
    , HashSplit.Hashes.RRS1
  other-modules:
      HashSplit.Internal.RingBuffer
    , HashSplit.Internal.Chunk
test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
