cabal-version:       2.2
name:                hashsplit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hashsplit/haskell-hashsplit
license:             MIT

license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://github.com/hashsplit/haskell-hashsplit

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.12 && <5
    , zenhack-prelude ^>=0.1
    , vector ^>=0.12.1
    , data-default-class ^>=0.1.2
    , bytestring ^>=0.10.10
    , mono-traversable ^>=1.0.15
  default-language:    Haskell2010

library
  import: shared-opts
  hs-source-dirs:      src
  exposed-modules:
      HashSplit
    , HashSplit.Classes
    , HashSplit.Hashes.CP32
    , HashSplit.Hashes.RRS1
  other-modules:
      HashSplit.Internal.RingBuffer
    , HashSplit.Internal.Chunk

test-suite tests
  import: shared-opts
  build-depends:
      hashsplit
    , aeson ^>=1.5.4
    , containers ^>=0.6.4
    , directory ^>=1.3.6
    , hspec ^>=2.7.4
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
